# Xory

./: README.md
xory-back/: .env  .gitignore  Cargo.toml  README.md
xory-back/api/: Cargo.toml
xory-back/api/src/: lib.rs
xory-back/api/src/routes/: diary.rs  mod.rs  user.rs
xory-back/common/: Cargo.toml
xory-back/common/src/: db_conn.rs  error.rs  lib.rs  res.rs  response.rs
xory-back/common/src/entity/: diary.rs  diary_category.rs  diary_tag.rs  diary_to_diary_tag.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs  user_group.rs  user_to_diary_tag.rs
xory-back/core/: Cargo.toml
xory-back/core/src/: diary.rs  lib.rs  user.rs  utility.rs
xory-back/middleware_fn/: Cargo.toml
xory-back/middleware_fn/src/: auth.rs
xory-back/migration/: Cargo.toml
xory-back/migration/data/m20231107_084318_init_table/: 1_user.sql  2_diary.sql  3_user_to_diary_tag.sql  4_diary_to_diary_tag.sql
xory-back/migration/src/: db_utils.rs  lib.rs  m20231107_084318_init_table.rs
xory-back/src/: main.rs
xory-back/test/: api.http
xory-front/: .env.development  components.d.ts  env.d.ts  package-lock.json  package.json  vite.config.ts
xory-front/src/: App.vue  main.ts  request.ts  router.ts
xory-front/src/api/: diary.ts  home.ts  login.ts
xory-front/src/assets/: base.scss  main.scss
xory-front/src/i18n/: index.ts
xory-front/src/i18n/data/: en-US.json
xory-front/src/router/: index.ts
xory-front/src/stores/: app.ts  index.ts  user.ts
xory-front/src/views/: TestView.vue
xory-front/src/views/diary/: AttributeItem.vue  DiaryDetailView.vue  DiaryListView.vue
xory-front/src/views/home/: HomeView.vue
xory-front/src/views/login/: LoginView.vue
