[workspace]
members = [".", "migration", "common", "core", "api"]

[package]
name = "xory-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "api" }
common = { path = "common" }
core = { path = "core" }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[workspace.dependencies]
axum = "0.6.20"
axum-extra = "0"
tokio = { version = "1.33.0", features = ["full"] }
dotenvy = "0"
sea-orm = { version = "0.12.0", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.75"
thiserror = "1.0.50"
