[workspace]
members = [".", "migration", "common", "core", "api"]

[package]
name = "xory-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "api" }
common = { path = "common" }
core = { path = "core" }
middleware_fn = { path = "middleware_fn" }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[workspace.dependencies]
axum = "0.6.20"
axum-extra = "0"
tokio = { version = "1.33.0", features = ["full"] }
dotenvy = "0"
sea-orm = { version = "0.12.0", features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.75"
thiserror = "1.0.50"
jsonwebtoken = "8.0"
once_cell = "1.8"
chrono = { version = "0", features = ["serde"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
bcrypt = "0.9"
rand = "0.8"
tower-http = { version = "0.4", features = ["full"] }
