[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
common = { path = "../common" }
middleware_fn = { path = "../middleware_fn" }
sea-orm = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
bcrypt = { workspace = true }
rand = { workspace = true }
